--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - '5432:5432'
     volumes:
       - db:/var/lib/postgresql/data
-  react-portfolio:
+  videogames-api:
     environment:
-      VIRTUAL_HOST: api-videojuegos.euge.dev, www.api-videjouegos.euge.dev
-      LETSENCRYPT_HOST: api-videojuegos.euge.dev, www.api-videojuegos.euge.dev
+      VIRTUAL_HOST: api-videjouegos.euge.dev
+      LETSENCRYPT_HOST: api-videojuegos.euge.dev
       LETSENCRYPT_EMAIL: eugeniasalazar745@gmail.com
       VIRTUAL_PORT: 3600
     build:
